--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "eslint-plugin-code-style",
-	"version": "1.0.2",
+	"version": "1.1.0",
 	"keywords": [
 		"eslint-plugin",
 		"code-style"
@@ -18,6 +18,13 @@
 		"url": "git+https://github.com/herrcolditz/eslint-plugin-code-style.git"
 	},
 	"peerDependencies": {
-		"eslint": "^9.0.0"
+		"eslint": "^9.0.0",
+		"@stylistic/eslint-plugin": "^5.2.3",
+		"@typescript-eslint/eslint-plugin": "^8.39.0",
+		"@typescript-eslint/parser": "^8.39.0",
+		"eslint-plugin-unused-imports": "^4.1.4",
+		"eslint-plugin-deprecation": "^3.0.0",
+		"eslint-plugin-unicorn": "^60.0.0",
+		"eslint-plugin-perfectionist": "^4.15.0"
 	}
 }
