--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "eslint-plugin-code-style",
-	"version": "1.1.1",
+	"name": "@colditzdev/eslint-plugin-code-style",
+	"version": "1.1.2",
 	"keywords": [
 		"eslint-plugin",
 		"code-style"
